Existence of vertex group significantly slow down select polygon/edge/vertex in edit mode with high density meshes. #84114

Closed
opened 2020-12-24 20:33:41 +01:00 by Alexander · 8 comments

System Information
Operating system: Windows 10
Graphics card: GTX 1060 3Gb

Blender Version
Broken: 2.91.0
Worked: -

Short description of error
If we have vertex group in object, selecting polygons, edges, vertex are significantly slower. If we remove vertex group performance of same operations are significantly faster.

Exact steps for others to reproduce the error
Subdivide any mesh to around 600-700k polygons.
Go to edit mode, select at least 25k or more vertex and adding them to vertex group.
Try to select polygons/edges/vertex - selecting process will be very slow.

Removing vertex group solve the problem.

**System Information** Operating system: Windows 10 Graphics card: GTX 1060 3Gb **Blender Version** Broken: 2.91.0 Worked: - **Short description of error** If we have vertex group in object, selecting polygons, edges, vertex are significantly slower. If we remove vertex group performance of same operations are significantly faster. **Exact steps for others to reproduce the error** Subdivide any mesh to around 600-700k polygons. Go to edit mode, select at least 25k or more vertex and adding them to vertex group. Try to select polygons/edges/vertex - selecting process will be very slow. Removing vertex group solve the problem.
Author

Added subscriber: @Alexander-35

Added subscriber: @Alexander-35

Added subscriber: @Stan_Pancakes

Added subscriber: @Stan_Pancakes
Member

Added subscribers: @fclem, @mont29, @ideasman42, @lichtwerk

Added subscribers: @fclem, @mont29, @ideasman42, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

Especially deselecting (e.g. box select in empty space) is painfully slow.
#84114.blend

Sysprof tells me ~40% of the time is spent in BLI_array_store_state_add (but that doesnt really tell me much - and also does not account for the rest of the time spent)

This might all be a known limitation, part of #73360 (Fast highpoly mesh editing) already (since it looks like GPU is spending time, too? or data transferred there?)

I was also checking on not letting the operator do anything (aka: return early/immediately) and it looks like the Undo step is eating up a whole lot of time ( this is where BLI_array_store_state_add comes into play again -- which is used in undo code um_arraystore_cd_compact)

@fclem, @mont29, @ideasman42 : does this ring a bell?

Can confirm. Especially deselecting (e.g. box select in empty space) is painfully slow. [#84114.blend](https://archive.blender.org/developer/F9554355/T84114.blend) Sysprof tells me ~40% of the time is spent in `BLI_array_store_state_add` (but that doesnt really tell me much - and also does not account for the rest of the time spent) This might all be a known limitation, part of #73360 (Fast highpoly mesh editing) already (since it looks like GPU is spending time, too? or data transferred there?) I was also checking on not letting the operator do **anything** (aka: return early/immediately) and it looks like the Undo step is eating up a whole lot of time ( this is where `BLI_array_store_state_add` comes into play again -- which is used in undo code `um_arraystore_cd_compact`) @fclem, @mont29, @ideasman42 : does this ring a bell?

This is caused by the custom data being an array of pointers that's never matching. I'll commit a simple fix shortly.

Longer term it would be good if we could store this in a way that would de-duplicate matching data.

This is caused by the custom data being an array of pointers that's never matching. I'll commit a simple fix shortly. Longer term it would be good if we could store this in a way that would de-duplicate matching data.
Campbell Barton self-assigned this 2021-02-11 08:14:15 +01:00

This issue was referenced by 196dfc01a3

This issue was referenced by 196dfc01a3e99c3bef0e44acf599bca50ae0300e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84114
No description provided.